# bootc

./: .gitattributes  .gitignore  CHANGELOG.md  CURRENT.md  Containerfile  Containerfile.arm64  HANDOFF.md  NEXT.md  PLAN.md  QUALITY.md  README.md  distrobox.arm64.ini  distrobox.ini  lefthook.yml  repo.json  system_profile.txt
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: coordinator.md  execute.md  prepare.md  recon-worker.md  recon.md  review.md
.github/prompts/: rfc-consolidation.prompt.md  verify-plan.prompt.md
.github/workflows/: build-arm64.yml  build.yml  check-upstream-drift.yml  ci.yml  pages.yml  verify-assumptions.yml
.runtime/: daemon.pid
Containerfile.d/: 90-system-config.tail  build-keyd.run  fetch-whitesur.run
bkt/: Cargo.toml
bkt-build/: Cargo.toml
bkt-build/src/: fetch.rs  main.rs  repos.rs  vendor_artifacts.rs
bkt-common/: Cargo.toml
bkt-common/src/: archive.rs  checksum.rs  error.rs  http.rs  lib.rs  manifest.rs
bkt/benches/: daemon.rs
bkt/src/: cli.rs  command_runner.rs  component.rs  containerfile.rs  context.rs  delegation.rs  effects.rs  error.rs  lib.rs  main.rs  output.rs  pipeline.rs  plan.rs  pr.rs  repo.rs  subsystem.rs  validation.rs
bkt/src/commands/: appimage.rs  apply.rs  base.rs  bootstrap.rs  build_info.rs  capture.rs  changelog.rs  completions.rs  containerfile.rs  dev.rs  distrobox.rs  dnf.rs  doctor.rs  drift.rs  extension.rs  fetchbin.rs  flatpak.rs  gsetting.rs  homebrew.rs  local.rs  migrate.rs  mod.rs  profile.rs  repo.rs  schema.rs  shim.rs  skel.rs  status.rs  subsystem.rs  system.rs  try_cmd.rs  tune.rs  upgrade.rs  upstream.rs  wrap.rs
bkt/src/commands/admin/: bootc.rs  daemon.rs  kargs.rs  mod.rs  systemctl.rs  systemd.rs
bkt/src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
bkt/src/dbus/: mod.rs  systemd.rs
bkt/src/manifest/: appimage.rs  base.rs  base_image.rs  binary.rs  build_info.rs  changelog.rs  diff.rs  distrobox.rs  dnf.rs  ephemeral.rs  extension.rs  external_repos.rs  fetchbin.rs  flatpak.rs  gsetting.rs  homebrew.rs  image_config.rs  mod.rs  shim.rs  system_config.rs  systemd_services.rs  toolbox.rs  try_pending.rs  upstream.rs  vendor_artifacts.rs
bkt/src/manifest/parsers/: keyd.rs  mod.rs  systemd.rs
bkt/tests/: cli.rs  daemon_stress.rs  properties.rs
docs/: ANALYSIS.md  ARCHITECTURE.md  ASPIRATIONS.md  CONCEPTS-DETAIL.md  CONCEPTS.md  MIGRATION.md  OSTREE-PATTERNS.md  PLAN.md  SECRETS.md  VISION.md  WORKFLOW.md
docs/agent-context/: axioms.design.toml  axioms.system.toml  axioms.workflow.toml  ideas.toml  modes.toml  plan.toml
docs/investigations/: README.md  (+1 more)
fetchbin/: Cargo.toml
fetchbin/src/: error.rs  lib.rs  main.rs  manifest.rs  platform.rs
fetchbin/src/runtime/: mod.rs  node.rs  pnpm.rs
fetchbin/src/source/: cargo.rs  github.rs  mod.rs  npm.rs
fetchbin/src/source/github/: api.rs  archive.rs  checksum.rs
fetchbin/tests/: github_integration.rs
inventory/: asahi-fonts-snippet.txt  flatpak-remotes.txt  getnf-host.txt  host-unowned-executables.txt  journald-logind-policy-notes.txt
manifests/: README.md  base-image-assumptions.json  distrobox.json  external-repos.arm64.json  external-repos.json  flatpak-apps.arm64.json  flatpak-apps.json  flatpak-apps.txt  flatpak-remotes.json  gnome-extensions.json  gnome-extensions.txt  gsettings.json  gsettings.txt  homebrew.json  host-binaries.json  host-shims.json  image-config.json  system-packages.json  systemd-services.json  toolbox-packages.json  vendor-artifacts.json
poc/: rpm-merge-test.Containerfile
rpmcheck/: Cargo.toml
schemas/: base-image-assumptions.schema.json  changelog-entry.schema.json  changelog-version.schema.json  distrobox.schema.json  external-repos.schema.json  flatpak-app.schema.json  flatpak-apps.schema.json  flatpak-remote.schema.json  flatpak-remotes.schema.json  gnome-extensions.schema.json  gsetting.schema.json  gsettings.schema.json  homebrew.schema.json  host-binaries.schema.json  host-shims.schema.json  shim.schema.json  systemd-services.schema.json  upstream-manifest.schema.json  vendor-artifacts.schema.json
scripts/: bootc-apply  bootc-bootstrap  bootc-repo  build-system-profile  check-drift  check-ostree-paths  code-managed  flush-swap  install-bkt  msedge-managed  prune-host-devtools  shim  toolbox-gpg-setup
skel/: .bash_profile  .bashrc  .profile
toolbox/: Containerfile
ujust/: 60-custom.just
upstream/: bazzite-stable.digest  bibata.sha256  getnf.ref  getnf.sha256  manifest.json  whitesur-icons.ref
(+126 files in other folders)
