[package]
name = "bkt-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
schema = ["schemars"]
http = ["ureq"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
lzma-rs = "0.3"
schemars = { version = "1", features = ["chrono04"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "1"
ureq = { version = "3", optional = true }
zip = "0.6"
