[package]
name = "bkt"
version = "0.1.0"
edition = "2024"
description = "Bucket - manage your bootc manifests"
authors = ["Yehuda Katz"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["chrono04"] }
anyhow = "1"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
proptest = "1"
tempfile = "3"
