[package]
name = "bkt"
version = "0.1.0"
edition = "2024"
description = "Bucket - manage your bootc manifests"
authors = ["Yehuda Katz"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["chrono04"] }
anyhow = "1"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
shlex = "1.3"
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
proptest = "1"
tempfile = "3"
