[package]
name = "bkt"
version = "0.1.0"
edition = "2024"
description = "Bucket - manage your bootc manifests"
authors = ["Yehuda Katz"]

[lib]
name = "bkt"
path = "src/lib.rs"

[[bin]]
name = "bkt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["chrono04"] }
anyhow = "1"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
shlex = "1.3"
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cliclack = "0.3.7"
indicatif = "0.18.3"
sha2 = "0.10.9"
hex = "0.4.3"
serde_yaml = "0.9.34"
urlencoding = "2.1.3"
base64 = "0.22"
zbus = "5"
nix = { version = "0.29", features = ["socket", "uio", "process", "signal"] }
ctrlc = "3"
libc = "0.2"
fetchbin = { path = "../fetchbin" }
bkt-common = { path = "../bkt-common", features = ["schema"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
proptest = "1"
tempfile = "3"
serial_test = "3"
whoami = "1"

# Benchmarking
criterion = "0.5"

[[bench]]
name = "daemon"
harness = false

[dependencies.is-terminal]
version = "0.4"
