[package]
name = "fetchbin"
version = "0.1.0"
edition = "2021"

[lib]
name = "fetchbin"
path = "src/lib.rs"

[[bin]]
name = "fetchbin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bkt-common = { path = "../bkt-common", features = ["http"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
glob = "0.3"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
